[metadata]
name = python-mscience-cachetclient
summary = A client and library for the Mscience Cachet administrative interface
description-file =
    README.rst
author = Benjamin Tallman (Many thanks to David Moreau Simard)
author-email = btallman@mscience.com
home-page = https://github.com/MScienceLLC/python-cachetclient
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Programming Language :: Python :: 2.7
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    mscience_cachetclient

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
